public/src/app/edit/edit.component.css
#container {
    margin: 2rem;
}
#form {
    display: inline-block;
    margin-bottom: 3rem;
    border-radius: 1rem;
    padding: 1rem;
    border: 3px solid #ce93d8;
}
.error {
  color: red;
}
.myButton {
  float: right;
  font-weight: bold;
  margin: 1rem 0;
  padding: .5rem;
  border-radius: 1rem;
  color: white;
  background-color: #f57c00;
}

.form-control:focus {
  border-color: #f57c00;
  box-shadow: inset 0 1px 9px rgba(0, 0, 0, 0.095), 0 0 8px #f57c00;
}
.warning {
  font-size: 10px;
  font-style: italic;
  color: #ce93d8;
}

